--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -57,10 +57,11 @@
         // }
     }
     .ChangeableText {
-        background: linear-gradient(73.6deg, #072af0 2.11%, #3a65f3);
+        background: linear-gradient(73.6deg, #f5d16d 2.11%, #ece176);
         background-clip: text;
         color: transparent;
         display: inline-block;
+        font-weight: 500;
         // text-align: right;
         margin-right: 10px;
     }
